--- a/front-end/appz/src/app/app.component.css
+++ b/front-end/appz/src/app/app.component.css
@@ -30,6 +30,11 @@
   color: black;
 }
 
-.content-container {
+.auth-buttons {
+  display: flex;
+  margin-left: auto;
+}
 
+.login-button {
+  background-color: #fcdfb8;
 }
