--- a/front-end/appz/src/app/app.component.html
+++ b/front-end/appz/src/app/app.component.html
@@ -11,10 +11,10 @@
 
   <div class="auth-buttons">
     <div>
-      <button mat-button [routerLink]="['/register']">Sign In</button>
+      <button mat-button>Sign In</button>
     </div>
     <div>
-      <button mat-raised-button class="login-button">Sign Up</button>
+      <button mat-raised-button class="login-button" [routerLink]="['/register']">Sign Up</button>
     </div>
   </div>
 </mat-toolbar>
