--- a/front-end/appz/src/app/app.component.html
+++ b/front-end/appz/src/app/app.component.html
@@ -11,7 +11,7 @@
 
   <div class="auth-buttons">
     <div>
-      <button mat-button>Sign In</button>
+      <button mat-button [routerLink]="['/login']">Sign In</button>
     </div>
     <div>
       <button mat-raised-button class="login-button" [routerLink]="['/register']">Sign Up</button>
