--- a/front-end/appz/src/app/login/login.component.html
+++ b/front-end/appz/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <mat-card class="login-container">
   <mat-card-header>
-    <h4 class="card-header">Login</h4>
+    <mat-card-title>Login</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <div >
@@ -19,10 +19,10 @@
             <mat-error *ngIf="f.password.errors.required">Password is required</mat-error>
           </div>
         </mat-form-field>
-        <div class="form-group">
-          <button mat-raised-button color="primary" [disabled]="loading" class="btn btn-primary">
+        <div>
+          <button class="login-button" mat-raised-button [disabled]="loading">
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-            Login
+            Log in
           </button>
         </div>
       </form>
