--- a/front-end/appz/src/app/app.component.html
+++ b/front-end/appz/src/app/app.component.html
@@ -7,6 +7,10 @@
     <div class="tab" [class.tab-active]="chatsLink.isActive">
       <a [routerLink]="['/chats']" routerLinkActive #chatsLink="routerLinkActive">Chats</a>
     </div>
+
+    <div class="tab" [class.tab-active]="consultantsLink.isActive">
+      <a [routerLink]="['/consultants']" routerLinkActive #consultantsLink="routerLinkActive">Consultants</a>
+    </div>
   </div>
 
   <div class="auth-buttons">
