--- a/front-end/appz/src/app/dwellings/dwellings.component.html
+++ b/front-end/appz/src/app/dwellings/dwellings.component.html
@@ -1,97 +1,33 @@
-<mat-card class="dwellings-container">
-  <mat-card-content class="dwellings-content">
-    <mat-accordion>
+<mat-spinner class="loading-spinner" *ngIf="loading"></mat-spinner>
+
+<mat-card class="dwellings-container" *ngIf="!loading">
+  <div class="empty-container" *ngIf="!dwellings?.length">
+    <h3>
+      <i>There are no dwellings for your location</i>
+    </h3>
+  </div>
+
+  <mat-card-content class="dwellings-content" *ngIf="dwellings?.length">
+    <mat-accordion *ngFor="let dwelling of dwellings">
       <mat-expansion-panel>
         <mat-expansion-panel-header>
           <mat-panel-title>
-            <span><b>Dwelling</b></span>
+            <span><b>{{dwelling.name}}</b></span>
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <p>Description</p>
+        <p>{{dwelling.description}}</p>
 
-        <p><b>Number of rooms:</b> 2</p>
-        <p><b>Arranged:</b> Yes</p>
-        <p><b>Has balcony:</b> Yes</p>
-        <p><b>Location: </b> Lviv</p>
+        <p><b>Number of rooms:</b> {{dwelling.numberOfRooms}}</p>
+        <p><b>Arranged:</b> {{dwelling.arranged ? 'Yes' : 'No'}}</p>
+        <p><b>Has balcony:</b> {{dwelling.balcony ? 'Yes' : 'No'}}</p>
+        <p><b>Location: </b> {{dwelling.location}}</p>
         <div class="dwelling-img-container">
-          <img class="dwelling-img" src="https://static.riel.ua/s3_ckf_files/images/news/shutterstock_1352039708.jpg" alt="dwelling">
+          <img class="dwelling-img" src="{{dwelling.photo}}" alt="dwelling">
         </div>
 
         <div class="dwelling-buttons">
-          <button mat-raised-button>Make agreement</button>
+          <button mat-raised-button (click)="createAgreement(dwelling.id)">Make agreement</button>
           <button mat-raised-button class="chat-button" (click)="createChat($event)">Contact consultant</button>
-        </div>
-      </mat-expansion-panel>
-    </mat-accordion>
-
-    <mat-accordion>
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            <span><b>Dwelling</b></span>
-          </mat-panel-title>
-        </mat-expansion-panel-header>
-        <p>Description</p>
-
-        <p><b>Number of rooms:</b> 2</p>
-        <p><b>Arranged:</b> Yes</p>
-        <p><b>Has balcony:</b> Yes</p>
-        <p><b>Location: </b> Lviv</p>
-        <div class="dwelling-img-container">
-          <img class="dwelling-img" src="https://static.riel.ua/s3_ckf_files/images/news/shutterstock_1352039708.jpg" alt="dwelling">
-        </div>
-
-        <div class="dwelling-buttons">
-          <button mat-raised-button>Make agreement</button>
-          <button mat-raised-button class="chat-button">Contact consultant</button>
-        </div>
-      </mat-expansion-panel>
-    </mat-accordion>
-
-    <mat-accordion>
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            <span><b>Dwelling</b></span>
-          </mat-panel-title>
-        </mat-expansion-panel-header>
-        <p>Description</p>
-
-        <p><b>Number of rooms:</b> 2</p>
-        <p><b>Arranged:</b> Yes</p>
-        <p><b>Has balcony:</b> Yes</p>
-        <p><b>Location: </b> Lviv</p>
-        <div class="dwelling-img-container">
-          <img class="dwelling-img" src="https://static.riel.ua/s3_ckf_files/images/news/shutterstock_1352039708.jpg" alt="dwelling">
-        </div>
-
-        <div class="dwelling-buttons">
-          <button mat-raised-button>Make agreement</button>
-          <button mat-raised-button class="chat-button">Contact consultant</button>
-        </div>
-      </mat-expansion-panel>
-    </mat-accordion>
-
-    <mat-accordion>
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            <span><b>Dwelling</b></span>
-          </mat-panel-title>
-        </mat-expansion-panel-header>
-        <p>Description</p>
-
-        <p><b>Number of rooms:</b> 2</p>
-        <p><b>Arranged:</b> Yes</p>
-        <p><b>Has balcony:</b> Yes</p>
-        <p><b>Location: </b> Lviv</p>
-        <div class="dwelling-img-container">
-          <img class="dwelling-img" src="https://static.riel.ua/s3_ckf_files/images/news/shutterstock_1352039708.jpg" alt="dwelling">
-        </div>
-
-        <div class="dwelling-buttons">
-          <button mat-raised-button>Make agreement</button>
-          <button mat-raised-button class="chat-button">Contact consultant</button>
         </div>
       </mat-expansion-panel>
     </mat-accordion>
