--- a/front-end/appz/src/app/consultants/consultants.component.css
+++ b/front-end/appz/src/app/consultants/consultants.component.css
@@ -1,24 +1,29 @@
-.register-container {
-  margin: 10px auto;
+.consultants-container {
+  margin: 10px;
   background-color: #faebd7;
   width: 300px;
-  padding: 30px;
+  padding: 20px;
 }
 
-.register-form {
+.consultants {
   display: flex;
-  flex-direction: column;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
 }
 
-.date-picker-input {
-  width: 235px;
-}
-
-.register-header {
+mat-card-header {
   display: flex;
   justify-content: center;
 }
 
-.register-button {
-  background-color: #fcdfb8;
+.add-button-container {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  margin: 40px;
+}
+
+.add-button {
+  background-color: #ffaf44;
+  color: black;
 }
