--- a/front-end/appz/src/app/register/register.component.html
+++ b/front-end/appz/src/app/register/register.component.html
@@ -3,7 +3,7 @@
     <mat-card-title>Registration</mat-card-title>
   </mat-card-header>
   <mat-card-content class="register-content">
-    <form class="example-form" [formGroup]="registerForm" class="register-form" (ngSubmit)="register()">
+    <form [formGroup]="registerForm" class="register-form" (ngSubmit)="register()">
       <mat-form-field>
         <mat-label>Email</mat-label>
         <input type="email" matInput formControlName="email" placeholder="kek@example.com">
